gateway-contract/contracts/escrow_contract/test_output.txt
cargo :    Compiling 
escrow_contract v0.0.0 
(C:\Users\amarjeet patel\D
esktop\myfolder222\Alien-G
ateway\gateway-contract\co
ntracts\escrow_contract)
At line:1 char:1
+ cargo test -p 
escrow_contract *>&1 | 
Out-File -FilePath 
'test_output. ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
    Compiling es...scro   
 w_contract):String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
error: cannot find 
attribute `contractimpl` 
in this scope
  --> contracts\escrow_con
tract\src\test.rs:17:3
   |
17 | #[contractimpl]
   |   ^^^^^^^^^^^^
   |
help: consider importing 
one of these attribute 
macros
   |
 3 + use 
crate::contractimpl;
   |
 3 + use 
soroban_sdk::contractimpl;
   |

error: cannot find 
attribute `contract` in 
this scope
  --> contracts\escrow_con
tract\src\test.rs:14:3
   |
14 | #[contract]
   |   ^^^^^^^^
   |
help: consider importing 
one of these attribute 
macros
   |
 3 + use crate::contract;
   |
 3 + use 
soroban_sdk::contract;
   |

warning: unused imports: 
`IntoVal` and `Symbol`
 --> contracts\escrow_cont
ract\src\test.rs:9:48
  |
9 | use 
soroban_sdk::{Address, 
BytesN, Env, Error, 
IntoVal, Symbol};
  |                       
                         
^^^^^^^  ^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of 
`#[warn(unused)]`) on by 
default

warning: use of 
deprecated method `soroban
_sdk::Env::register_stella
r_asset_contract`: use [En
v::register_stellar_asset_
contract_v2]
  --> contracts\escrow_con
tract\src\test.rs:44:21
   |
44 |     let token = env.r
egister_stellar_asset_cont
ract(token_admin.clone());
   |                     ^
^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^
   |
   = note: 
`#[warn(deprecated)]` on 
by default

error[E0277]: the trait 
bound `MockRegistrationCon
tract: Register` is not 
satisfied
   --> contracts\escrow_co
ntract\src\test.rs:331:31
    |
331 |     let reg_id = env
.register(MockRegistration
Contract, ());
    |                     
 -------- 
^^^^^^^^^^^^^^^^^^^^^^^^ 
unsatisfied trait bound
    |                     
 |
    |                     
 required by a bound 
introduced by this call
    |
help: the trait 
`ContractFunctionSet` is 
not implemented for 
`MockRegistrationContract`
   --> contracts\escrow_co
ntract\src\test.rs:15:1
    |
 15 | pub struct 
MockRegistrationContract;
    | ^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^
help: the trait 
`ContractFunctionSet` is 
implemented for 
`EscrowContract`
   --> contracts\escrow_co
ntract\src\lib.rs:26:1
    |
 26 | #[contract]
    | ^^^^^^^^^^^
    = note: required for `
MockRegistrationContract` 
to implement `Register`
note: required by a bound 
in `Env::register`
   --> C:\Users\amarjeet p
atel\.cargo\registry\src\i
ndex.crates.io-1949cf8c6b5
b557f\soroban-sdk-23.5.3\s
rc\env.rs:711:12
    |
709 |     pub fn 
register<'a, C, A>(&self, 
contract: C, 
constructor_args: A) -> 
Address
    |            -------- 
required by a bound in 
this associated function
710 |     where
711 |         C: Register,
    |            ^^^^^^^^ 
required by this bound in 
`Env::register`
    = note: this error 
originates in the 
attribute macro 
`contract` (in Nightly 
builds, run with -Z 
macro-backtrace for more 
info)

error[E0433]: failed to 
resolve: use of 
undeclared type `MockRegis
trationContractClient`
   --> contracts\escrow_co
ntract\src\test.rs:332:22
    |
332 |     let reg_client 
= MockRegistrationContract
Client::new(env, &reg_id);
    |                     
 ^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^
    |                     
 |
    |                     
 use of undeclared type `M
ockRegistrationContractCli
ent`
    |                     
 help: a struct with a 
similar name exists: 
`MockRegistrationContract`

warning: use of 
deprecated method `soroban
_sdk::Env::register_stella
r_asset_contract`: use [En
v::register_stellar_asset_
contract_v2]
   --> contracts\escrow_co
ntract\src\test.rs:337:21
    |
337 |     let token = env.
register_stellar_asset_con
tract(token_admin);
    |                     
^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^

error[E0277]: the trait 
bound `MockRegistrationCon
tract: Register` is not 
satisfied
   --> contracts\escrow_co
ntract\src\test.rs:408:31
    |
408 |     let reg_id = env
.register(MockRegistration
Contract, ());
    |                     
 -------- 
^^^^^^^^^^^^^^^^^^^^^^^^ 
unsatisfied trait bound
    |                     
 |
    |                     
 required by a bound 
introduced by this call
    |
help: the trait 
`ContractFunctionSet` is 
not implemented for 
`MockRegistrationContract`
   --> contracts\escrow_co
ntract\src\test.rs:15:1
    |
 15 | pub struct 
MockRegistrationContract;
    | ^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^
help: the trait 
`ContractFunctionSet` is 
implemented for 
`EscrowContract`
   --> contracts\escrow_co
ntract\src\lib.rs:26:1
    |
 26 | #[contract]
    | ^^^^^^^^^^^
    = note: required for `
MockRegistrationContract` 
to implement `Register`
note: required by a bound 
in `Env::register`
   --> C:\Users\amarjeet p
atel\.cargo\registry\src\i
ndex.crates.io-1949cf8c6b5
b557f\soroban-sdk-23.5.3\s
rc\env.rs:711:12
    |
709 |     pub fn 
register<'a, C, A>(&self, 
contract: C, 
constructor_args: A) -> 
Address
    |            -------- 
required by a bound in 
this associated function
710 |     where
711 |         C: Register,
    |            ^^^^^^^^ 
required by this bound in 
`Env::register`
    = note: this error 
originates in the 
attribute macro 
`contract` (in Nightly 
builds, run with -Z 
macro-backtrace for more 
info)

error[E0433]: failed to 
resolve: use of 
undeclared type `MockRegis
trationContractClient`
   --> contracts\escrow_co
ntract\src\test.rs:409:22
    |
409 |     let reg_client 
= MockRegistrationContract
Client::new(&env, 
&reg_id);
    |                     
 ^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^
    |                     
 |
    |                     
 use of undeclared type `M
ockRegistrationContractCli
ent`
    |                     
 help: a struct with a 
similar name exists: 
`MockRegistrationContract`

warning: use of 
deprecated method `soroban
_sdk::Env::register_stella
r_asset_contract`: use [En
v::register_stellar_asset_
contract_v2]
   --> contracts\escrow_co
ntract\src\test.rs:414:21
    |
414 |     let token = env.
register_stellar_asset_con
tract(token_admin);
    |                     
^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^

warning: unused variable: 
`from`
   --> contracts\escrow_co
ntract\src\test.rs:736:52
    |
736 |     let 
(contract_id, client, 
token, _token_admin, 
from, _to) = 
setup_test(&env);
    |                     
                          
     ^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_from`
    |
    = note: `#[warn(unused
_variables)]` (part of 
`#[warn(unused)]`) on by 
default

warning: unused variable: 
`from`
   --> contracts\escrow_co
ntract\src\test.rs:762:52
    |
762 |     let 
(contract_id, client, 
token, _token_admin, 
from, _to) = 
setup_test(&env);
    |                     
                          
     ^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_from`

warning: unused variable: 
`from`
   --> contracts\escrow_co
ntract\src\test.rs:789:52
    |
789 |     let 
(contract_id, client, 
token, _token_admin, 
from, _to) = 
setup_test(&env);
    |                     
                          
     ^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_from`

warning: unused variable: 
`from`
   --> contracts\escrow_co
ntract\src\test.rs:822:52
    |
822 |     let 
(contract_id, client, 
token, _token_admin, 
from, _to) = 
setup_test(&env);
    |                     
                          
     ^^^^ help: if this 
is intentional, prefix it 
with an underscore: 
`_from`

Some errors have detailed 
explanations: E0277, 
E0433.
For more information 
about an error, try 
`rustc --explain E0277`.
warning: 
`escrow_contract` (lib 
test) generated 8 warnings
error: could not compile 
`escrow_contract` (lib 
test) due to 6 previous 
errors; 8 warnings emitted
